[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/grass.png" type="Texture" id=1]
[ext_resource path="res://src/scripts/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/PoetsenOne-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/scenes/SinglePlayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/scenes/MultiPlayer.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0.588235, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0.27451, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0.423529, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0.588235, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0.27451, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0.392157, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=8]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0.588235, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0, 0.27451, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0.392157, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=12]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=13]
size = 25
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0, 0, 0.588235, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0, 0, 0.27451, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0, 0, 0.392157, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=17]
size = 25
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
multiPath = ExtResource( 5 )
singlePath = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MultiButton" type="Button" parent="."]
margin_left = 256.0
margin_top = 64.0
margin_right = 448.0
margin_bottom = 128.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "Multiplayer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SingleButton" type="Button" parent="."]
margin_left = 576.0
margin_top = 64.0
margin_right = 768.0
margin_bottom = 128.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
text = "Singleplayer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Button" parent="."]
margin_left = 432.0
margin_top = 152.0
margin_right = 592.0
margin_bottom = 216.0
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = SubResource( 12 )
text = "How to play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="instruction" type="Label" parent="."]
margin_top = 232.0
margin_right = 1024.0
margin_bottom = 480.0
custom_fonts/font = SubResource( 13 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Closer" type="Button" parent="."]
margin_left = 432.0
margin_top = 512.0
margin_right = 592.0
margin_bottom = 576.0
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
custom_fonts/font = SubResource( 17 )
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MultiButton" to="." method="_on_MultiButton_pressed"]
[connection signal="pressed" from="SingleButton" to="." method="_on_SingleButton_pressed"]
[connection signal="pressed" from="Info" to="." method="_on_Info_pressed"]
[connection signal="pressed" from="Closer" to="." method="_on_Closer_pressed"]
